<resources>
    <string name="app_name">Xpaper</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="back_color">Back Color</string>
    <string name="front_color">Front Color</string>
    <string name="accent_color">Accent Color</string>

    <string name="made_with_love">Jaxon Wright\nChad Teitsma</string>
    <string name="opensource">AppIntro by Paolo Rotolo\nMaterial Dialogs by Aidan Follestad\nPicasso by Square Up</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="color_settings">Color Settings</string>
    <string name="placeholder_text">placeholder text</string>
    <string name="wallpaper_preview">Wallpaper Preview</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="device_colors">Device Colors</string>
    <string name="colors">Colors</string>
    <string name="background">Background</string>
    <string name="foreground">Foreground</string>
    <string name="gradient">Gradient</string>
    <string name="ver_text">Version</string>
    <string name="dev_text">Developers</string>
    <string name="artist_text">Artists</string>
    <string name="artists">Jaxon Wright</string>
    <string name="lib_text">Libraries Used</string>
    <string name="shuffle">Shuffle</string>
    <string name="front">Front</string>
    <string name="back">Back</string>
    <string name="disclaimer">Moto X is property of Motorola Mobility LLC.</string>

</resources>
