<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.WallConfigFragment">

    <TextView
        android:id="@+id/colors_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/colors"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingTop="16dp" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/colors_text"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/background_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/background"
                android:paddingBottom="24dp"
                android:paddingRight="8dp" />

            <TextView
                android:id="@+id/foreground_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/foreground"
                android:layout_below="@id/background_text" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/background_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/background_text"
                android:layout_marginBottom="16dp" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/foreground_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/background_spinner"
                android:layout_below="@id/background_spinner" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>
