<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/colors_fragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.MainActivity">


    <ImageView
        android:id="@+id/device_preview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.45" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.55">

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/model_spinner"
            android:padding="16dp"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#fcfcfc"
            android:text="@string/front"
            android:id="@+id/front_button"
            android:layout_below="@id/model_spinner"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#fcfcfc"
            android:text="@string/back"
            android:id="@+id/back_button"
            android:layout_below="@+id/front_button"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#fcfcfc"
            android:text="Accent"
            android:id="@+id/accent_button"
            android:layout_below="@+id/back_button"
            android:layout_centerHorizontal="true" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/front_circle"
            android:src="@drawable/circle"
            android:layout_centerVertical="true"
            android:layout_below="@id/model_spinner"
            android:layout_toLeftOf="@id/front_button" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:id="@+id/back_circle"
            android:src="@drawable/circle"
            android:layout_toLeftOf="@id/back_button"
            android:layout_below="@id/front_circle" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:id="@+id/accent_circle"
            android:src="@drawable/circle"
            android:layout_toLeftOf="@id/accent_button"
            android:layout_below="@id/back_circle" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#fcfcfc"
            android:text="@string/shuffle"
            android:id="@+id/random_button"
            android:layout_below="@+id/accent_button"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/random_button"
            android:textAlignment="center"
            android:layout_margin="16dp"
            android:text="Wood and leather options are coming soon" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/introFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:src="@drawable/ic_done_24dp" />
    </RelativeLayout>
</LinearLayout>